FIX header responsive visibility

--- a/src/assets/scss/ResponsiveRules.scss
+++ b/src/assets/scss/ResponsiveRules.scss
@@ -2,6 +2,7 @@
 
 @media screen and (max-width: 767px) {
   header {
+    padding: 1.5rem 0 !important;
 
     .mobile_menu {
       display: block !important;
@@ -13,8 +14,8 @@
       top: 0;
       right: 0;
       z-index: 2;
-      justify-content: space-between;
       flex-direction: column;
+      justify-content: space-between;
       flex-shrink: 0;
       width: 100%;
       height: 100vh;
@@ -24,7 +25,12 @@
     }    
 
     #menu {
+      display: none !important;
       flex-direction: column;
+
+      &.menu_visible {
+        display: flex !important;
+      }
 
       li {
         margin: 1rem 0 !important;
@@ -33,12 +39,25 @@
     }
 
     #socials {
+      display: none !important;
       margin: 0 !important;
+
+      &.menu_visible {
+        display: flex !important;
+      }
 
       li {
         margin: 0 0.375rem;
       }
 
+    }
+
+  }
+
+  main {
+
+    #jumbo {
+      background-position: 30% center;
     }
 
   }
