--- a/src/assets/scss/partials/_AppHeader.scss
+++ b/src/assets/scss/partials/_AppHeader.scss
@@ -1,6 +1,8 @@
 @use "./_variables.scss" as *;
 
 header {
+  padding: 3rem 0;
+  z-index: 3;
 
   #logo {
     cursor: pointer;
